clean code without JS

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--NAVIGATION SECTION-->
 <div class="navbar">
     <div class="logo">
-        <span style="font-size:25px;cursor:pointer" onclick="openNav()">&#9776;</span>
+        <span style="font-size:25px;cursor:pointer">&#9776;</span>
         <p>BIG-LOGO</p>
     </div>
 
@@ -39,7 +39,7 @@
     <div class="sidebar" id="sidebar">
         <div class="subsub">
             <p>BIG-LOGO</p>
-            <span style="font-size:25px;cursor:pointer;right: 25px;" class="closebtn" onclick="closeNav()">&times;</span>
+            <span style="font-size:25px;cursor:pointer;right: 25px;" class="closebtn" >&times;</span>
         </div>
         
         <div>
@@ -199,7 +199,6 @@
 
 </div>
 
-<script src="script.js"></script>
 
 
 </body>
